# GisDemo

./: .gitignore  README.md  invoke.yaml.example  pyproject.toml  tasks.py
Vogel/: settings.py  urls.py
backend/Vogel/: .env.example  .gitignore  README.md  manage.py  pyproject.toml
backend/Vogel/Vogel/: api.py  asgi.py  settings.py  urls.py  wsgi.py
backend/Vogel/observation/: api.py  models.py  tests.py
backend/Vogel/observation/migrations/: 0001_initial.py  0002_observation_imported.py  0003_alter_observation_date.py
backend/Vogel/places/migrations/: 0001_initial.py
backend/Vogel/species/: admin.py  api.py  models.py  tests.py
backend/Vogel/species/migrations/: 0001_initial.py  0002_alter_species_latin_name.py  0003_species_avatar_url.py  0004_alter_species_name.py
backend/Vogel/utils/: saveJsonFromUrl.py
backend/Vogel/utils/management/commands/: importData.py  saveJsonFromUrl.py  searchImages.py
frontend/Vogel/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/Vogel/src/: main.ts
frontend/Vogel/src/assets/: main.css
frontend/Vogel/src/components/: AddMap.vue  AddObservation.vue  Map.vue  MiniMap.vue  ObservationCard.vue  Observations.vue
frontend/Vogel/src/types/: Observation.ts  Species.ts
frontend/Vogel/src/views/: HomeView.vue
install_files/: bash_non_interactive  gunicorn.service  nginx_site
observation/: admin.py
places/: load.py  models.py
species/: models.py
