[project]
name = "vogel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "beautifulsoup4>=4.13.3",
    "django>=5.1.6",
    "django-environ>=0.12.0",
    "django-ninja>=1.3.0",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
]
